--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         R -e 'install.packages("rvest")'
     # Run R script
     - name: Scrape
-      run: Rscript film_and_time_scraper.R
+      run: Rscript test.R
       
  # Add new files in data folder, commit along with other modified files, push
     - name: Commit files
