--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: spanishTDTscrape
 # Controls when the action will run.
 on:
   schedule:
-  - cron: '*/5 * * * *'
+  - cron: '30 11 5 * *'
 
 
 jobs: 
